# procureIQ

./: README.md  pyproject.toml
procureiq/: README.md  report.md  rfx.md
procureiq/src/procureiq/: crew.py  main.py  rfx.md
procureiq/src/procureiq/config/: agents.yaml  tasks.yaml
src/: negotiation_strategy.md  rfx.md  suppliers.csv
src/procureiq/: crew.py  main.py  rfx.md  suppliers.csv
src/procureiq/config/: agents.yaml  tasks.yaml
src/procureiq/tools/: supplier_search_tool.py
