[project]
name = "procureiq"
version = "0.1.0"
description = "procureIQ using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
procureiq = "procureiq.main:run"
run_crew = "procureiq.main:run"
train = "procureiq.main:train"
replay = "procureiq.main:replay"
test = "procureiq.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
